--- a/templates/home.html
+++ b/templates/home.html
@@ -2,54 +2,45 @@
 <html>
   <head>
     <title>Sovian Careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
     <style>
-      h1{
-        font-size: 60px;
-        font-family: Roboto;
-        font-weight:normal;
-        color:rgb(50, 50, 50);
-        text-align:center;
-      }
       #banner{
-        width:100%;
-        height:360px;
-        object-fit:cover; 
-      }
-      h2{
-        font-family: Roboto;
-        font-size: 32px;
-        color: rgb(100, 100, 100);
-        text-aling: center;
-        font-weight: normal;
-      }
-      .bodytext{
-        font-family:Roboto;
-        color: rgb(80, 80, 80);
-      }
-      #container{
-        max-width:720px;
-        margin:0 auto;
+        height: 320px;
+        width: 100%;
+        object-fit: cover;
       }
     </style>
+
   </head>
   <body>
     
-   <div id="container">
-    <h1>Sovian Careers</h1>
-    <img id="banner" src ="https://sovian-carrers-websitw--simranchauhan2.repl.co/static/banner.jpg " height= "320px">
+   <div class="container">
+    <h1 class="text-center" mt-2 mb-4>
+      {{company_name}} Careers
+    </h1>
+    <img id="banner" class="img-fluid" src ="https://sovian-carrers-websitw--simranchauhan2.repl.co/static/banner.jpg " height= "320px">
     <p>Hello there you will learn about the job openings at Sovian 
        here.</p>
-    <h2>About Sovian</h2>
-    <p class="bobytext">Lorem ipsum dolor sit amet. Qui omnis libero non voluptas laudantium est ducimus rerum et aperiam facilis. Aut aliquid minus ex rerum dolorem aut doloribus nostrum et quia magnam ab mollitia omnis qui voluptas inventore! Qui nisi dolorem in possimus internos qui sunt voluptatem est natus corrupti sit similique autem sed dolores voluptatem quo commodi adipisci! Ut sint officiis qui iure harum et similique incidunt. Qui ipsum ipsa qui dolores eligendi in veritatis recusandae id nostrum tempore hic recusandae ipsam? Non corrupti illum in inventore quaerat et dolores blanditiis. Non quia unde in nesciunt natus non placeat aliquid quo nostrum culpa sit omnis beatae vel odit quidem. Et sint ipsa qui galisum libero et architecto voluptatibus eum voluptates soluta. 
+    <h2 class="text-center">About Sovian</h2>
+    <p class="lead">Lorem ipsum dolor sit amet. Qui omnis libero non voluptas laudantium est ducimus rerum et aperiam facilis. Aut aliquid minus ex rerum dolorem aut doloribus nostrum et quia magnam ab mollitia omnis qui voluptas inventore! Qui nisi dolorem in possimus internos qui sunt voluptatem est natus corrupti sit similique autem sed dolores voluptatem quo commodi adipisci! Ut sint officiis qui iure harum et similique incidunt. Qui ipsum ipsa qui dolores eligendi in veritatis recusandae id nostrum tempore hic recusandae ipsam? Non corrupti illum in inventore quaerat et dolores blanditiis. Non quia unde in nesciunt natus non placeat aliquid quo nostrum culpa sit omnis beatae vel odit quidem. Et sint ipsa qui galisum libero et architecto voluptatibus eum voluptates soluta. 
  </p>
     
-    <h2>Open Positions</h2>
-    <p class="bodytext">ToDo-Show jobs here later</p>
-   <div style="text-aling:center;">
-     <button>Contact Us</button>
+    <h2 class="text-center">Open Positions</h2>
+    <p > 
+      <div>
+       {% for jobs in jobs %}
+        {% include 'jobitem.html' %}
+        {% endfor %}
+      </div>
+    </p>
+   <div class="text-center">
+     <button class="btn btn-primary btn-lg">Contact Us</button>
+    <p class="mt-4">copyright Sovian 2023</p>
    </div>
-    <p>copyright Sovian 2023</p>
      
    </div>
   </body>
-</html>
+</html>,
