--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -13,8 +13,10 @@
     </div>
     {% endif%}
   </div>
-  <div class="col-3">
-  <button type="button" class="btn btn-outline-primary">Apply</button>
+  <div class="col-3 padding-right:16px;">
+  <a href="mailto:hello@sovian.ai?subject=Application 
+   for{{jobs['title']}} " type="button" class="btn btn-outline-primary 
+   float-right aling-middle">Apply </a>
   </div>
   
 </div>
