updated the home.html file and creat some other files as per requirement.

--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -11,11 +11,10 @@
     <div>
       <b>Salary</b>{{jobs['salary']}}
     </div>
-    {% endif%}
+    {% endif %}
   </div>
   <div class="col-3 padding-right:16px;">
-  <a href="mailto:hello@sovian.ai?subject=Application 
-   for{{jobs['title']}} " type="button" class="btn btn-outline-primary 
+  <a href="/job/{{job['id']}} " type="button" class="btn btn-outline-primary 
    float-right aling-middle">Apply </a>
   </div>
   
