--- a/templates/home.html
+++ b/templates/home.html
@@ -2,29 +2,16 @@
 <html>
   <head>
     <title>Sovian Careers</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
-    <style>
-      #banner{
-        height: 320px;
-        width: 100%;
-        object-fit: cover;
-        margin-bottom:16px;
-      }
-    </style>
-
+    {% include 'bootstrap.html' %}
+    
   </head>
   <body>
 
     {% include 'nav.html' %}
- <img id="banner" class="img-fluid" src ="https://sovian-carrers-websitw--simranchauhan2.repl.co/static/banner.jpg " height= "320px">
-    
-    
+    {% include 'banner.html'%}   
    <div class="container">
     <h1 class="text-center mt-2 mb-4">
-      {{company_name}} Careers
+      Sovian Careers
     </h1>
     
      <div class="row">
