--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,6 @@
 <nav class="navbar shadow-sm fixed-top bg-white">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      
+    <a class="navbar-brand" href="/">
       Sovian
     </a>
   </div>
