--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -31,6 +31,7 @@
     <p>{{job.requirements}}</p>
     <h4>Salary</h4>
     <p>{{job.currency}}{{job.salary}}</p>
+    {% include 'application_forms.html' %}
     
   </div>
     {% include 'footer.html' %}
