--- a/templates/application_forms.html
+++ b/templates/application_forms.html
@@ -2,17 +2,17 @@
 <form action="/job/{{job[id]}}/apply" method="post">
   <div class="mb-2">
     <label>Full Name</label><br>
-    <input type="text" name="full_name" placeholder="Candidate's Name">
+    <input type="text" required name="full_name" placeholder="Candidate's Name">
   </div>
   
  <div class="mb-2">
     <label>Email</label><br>
-    <input type="text" name="email" placeholder="xyz@gmail.com">
+    <input type="email" required name="email" placeholder="xyz@gmail.com">
   </div>
 
    <div class="mb-2">
     <label>LinkedIn URL</label><br>
-    <input type="text"name="linkedin_url"placeholder="https://linked.com/in/xyz">
+    <input type="url" name="linkedin_url"placeholder="https://linked.com/in/xyz">
   </div>
 
    <div>
@@ -27,7 +27,7 @@
 
   <div class="mb-2">
     <label>Resume URL</label><br>
-    <input type="text" name="resume_url">
+    <input type="url" name="resume_url">
   </div>
 
   <input type="Submit">
