--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
     <h2 class="text-center mt-2 mb-4">Open Positions</h2>
     <p > 
       <div>
-       {% for jobs in jobs %}
+       {% for job in jobs %}
         {% include 'jobitem.html' %}
         {% endfor %}
       </div>
