--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -1,8 +1,4 @@
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial- 
       scale=1">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0- 
-      alpha3/dist/css/bootstrap.min.css" rel="stylesheet" 
-      integrity="sha384-
-    KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" 
-     crossorigin="anonymous">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
