--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -14,7 +14,7 @@
     {% endif %}
   </div>
   <div class="col-3 padding-right:16px;">
-  <a href="/job/{{job['id']}}/apply" type="button" class="btn btn-outline-primary float-right aling-middle">Apply </a>
+  <a href="/jobs/{{job['id']}}" type="button" class="btn btn-outline-primary float-right aling-middle">Apply </a>
   </div>
   
 </div>
