--- a/templates/recruiter.html
+++ b/templates/recruiter.html
@@ -11,6 +11,7 @@
     <h1>Welcome to Sovian Careers</h1>
     <div class="firstpage">
     <a href="/add_jobs">Add Jobs</a>
+    <a href="/see_applicants">See Applicants</a>
     </div>
 </body>
 </html>
